# mtop

./: CMakeLists.txt  README.md  main.cpp  package.json  tsconfig.json
src/: Cpu.cpp  Cpu.hpp  Memory.cpp  Memory.hpp  Monitor.cpp  Monitor.hpp  MonitorServer.cpp  MonitorServer.hpp  Processes.cpp  Processes.hpp
web/: index.html  script.js  script.js.map  script.ts  styles.css
